# rust-openzl

./: .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.claude/: settings.local.json
openzl/: Cargo.toml
openzl-sys/: Cargo.toml  build.rs
openzl-sys/src/: lib.rs  shim.c
openzl/examples/: graph_compression.rs  numeric_compress.rs  serial_compress.rs  typed_compression.rs
openzl/src/: lib.rs
openzl/tests/: smoke.rs
