[package]
name = "openzl-sys"
version = "0.1.0"
edition = "2021"
authors = ["rust-openzl contributors"]
links = "openzl"
license = "MIT OR Apache-2.0"
description = "Low-level FFI bindings for OpenZL (vendored C library)"
readme = "../README.md"
repository = "https://github.com/vitorpy/rust-openzl"
homepage = "https://github.com/vitorpy/rust-openzl"
documentation = "https://docs.rs/openzl-sys"
keywords = ["compression", "openzl", "ffi", "bindings"]
categories = ["compression", "external-ffi-bindings"]
rust-version = "1.70"
include = [
    "build.rs",
    "src/**/*",
    "vendor/**/*",
    "Cargo.toml",
]
exclude = [
    "vendor/openzl/doc/mkdocs/src",  # Symlink loop
    "vendor/openzl/.git*",  # Git metadata
    "vendor/openzl/**/.git*",  # Submodule git metadata
]

[build-dependencies]
cmake = "0.1"
cc = "1.0"
bindgen = "0.69"

[dependencies]
libc = { workspace = true }
