[package]
name = "rust-openzl-sys"
version = "0.1.0"
edition = "2021"
authors = ["rust-openzl contributors"]
links = "openzl"
license = "MIT OR Apache-2.0"
description = "Low-level FFI bindings for OpenZL (vendored C library)"
readme = "../README.md"
repository = "https://github.com/vitorpy/rust-openzl"
homepage = "https://github.com/vitorpy/rust-openzl"
documentation = "https://docs.rs/rust-openzl-sys"
keywords = ["compression", "openzl", "ffi", "bindings"]
categories = ["compression", "external-ffi-bindings"]
rust-version = "1.70"
include = [
    "build.rs",
    "src/**/*",
    "Cargo.toml",
    "vendor/openzl/src/**/*",
    "vendor/openzl/include/**/*",
    "vendor/openzl/build/**/*",
    "vendor/openzl/tools/**/*",
    "vendor/openzl/cpp/**/*",
    "vendor/openzl/CMakeLists.txt",
    "vendor/openzl/defs.bzl",
    "vendor/openzl/Makefile",
    "vendor/openzl/CHANGELOG",
    "vendor/openzl/CODE_OF_CONDUCT.md",
    "vendor/openzl/LICENSE",
    "vendor/openzl/README.md",
    "vendor/openzl/deps/json_examples.json",
    "vendor/openzl/deps/nci-short",
    "vendor/openzl/deps/sao-short",
    "vendor/openzl/deps/zstd/lib/**/*",
    "vendor/openzl/deps/zstd/build/cmake/**/*",
    "vendor/openzl/deps/zstd/build/meson/**/*",
    "vendor/openzl/deps/zstd/CMakeLists.txt",
    "vendor/openzl/deps/zstd/Makefile",
    "vendor/openzl/deps/zstd/LICENSE",
    "vendor/openzl/deps/zstd/README.md",
]

[build-dependencies]
cmake = "0.1"
cc = "1.0"
bindgen = "0.69"

[dependencies]
libc = { workspace = true }
